# BenchMark

./: .gitignore  BenchMark  CHANGELOG.md  CITATION.cff  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
R/: benchmark_plots.R
benchmark/: __init__.py  cli.py  daemon.py  merger.py  process_utils.py  reporter.py  state.py
docs/: github_draft.md  supplementary_validation.md
tests/: simulate_workflow.py  test_core.py  validate_accuracy.py  validation_study.py
